frontend/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: atc-frontend
  labels:
    app: atc-frontend
spec:
  to:
    kind: Service
    name: atc-frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
